--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
         body {
             /* Main body background remains white */
-            background-color: white;
+            background-color: [#f9f9f9];
             /* Newspaper-y serif font */
             font-family: 'Lora', serif; 
             color: #1e293b; /* Slate 800 */
