--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
     <!-- Header & Navigation -->
     <header class="max-w-xl mx-auto px-4 sm:px-6 lg:px-8 mb-6 flex justify-between items-center">
-        <h1 class="text-3xl font-bold text-gray-800">The Daily Scroll</h1>
+        <h1 class="text-3xl font-bold text-gray-800">LEDA</h1>
         <nav>
             <a href="#about-section" id="about-link" class="text-sm font-medium text-indigo-600 hover:text-indigo-800 transition duration-150 p-2 rounded-lg hover:bg-indigo-50">
                 About
