--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
     <!-- About Section (Anchored at the bottom) -->
     <!-- ADDED bg-[#FDF6F0] to the about section -->
     <section id="about-section" class="max-w-xl mx-auto mt-16 px-6 sm:px-8 py-8 bg-[#FDF6F0] shadow-lg rounded-3xl border border-gray-100">
-        <h2 class="text-2xl font-bold mb-4 text-gray-800">What is The Daily Scroll?</h2>
+        <h2 class="text-2xl font-bold mb-4 text-gray-800">What is LEDA?</h2>
         <div class="space-y-4 text-gray-600">
-            <p>This website is designed as a focused, one-month cultural micro-project. Every day, a new, single opinion column is published, encouraging users to digest one idea fully before moving on.</p>
-            <p>The **preview cards** allow for quick scanning, while clicking expands the article into a **dedicated reading page** for a distraction-free experience.</p>
-            <p class="text-sm text-gray-400">Project concept by [Your Name/Team]. Created with a mobile-first philosophy.</p>
+            <p>It's a bit of a pun really. A "leader" is an anonymously written column in a newspaper which offers the house's take on current affairs. LEDA is doing that. Sorta.</p>
+            <p> Every day this month, at 7am GMT, one new opinion piece will be published.</p>
+            <p class="text-sm text-gray-400">Brought to you by the creators of Madeleine and Hélène.</p>
         </div>
     </section>
 
